# slime-shader

./: Cargo.toml
src/: compute.wgsl  constants.rs  draw.wgsl  framework.rs  main.rs  shader.rs
