[package]
name = "slime-shader"
version = "0.1.0"
authors = ["James"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3" }
winit = { version = "0.24", features = ["web-sys"] }
# wgpu = { path = "../wgpu-rs" }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
bytemuck = "1.5.1"
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.8"
log = "0.4"
cgmath = "0.18"

[patch."https://github.com/gfx-rs/naga"]
# naga = { path = "../naga" }
naga = { git = "https://github.com/james-j-obrien/naga" }